--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body {
     display: flex;
     margin: 0;
+    font-family: sans-serif;
 }
 
 .left {
@@ -18,13 +19,18 @@ body {
 .right {
     width: 70%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 50px;
+    background-color: #f9fafb;
 }
 
 .logo-wrapper {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 15%;
-    margin-top: 25vh;
+    margin-top: 20vh;
     display: flex;
     justify-content: center;
 }
@@ -40,4 +46,9 @@ body {
 
 img {
     margin: 10px;
+}
+
+form {
+    background-color: red;
+    margin-bottom: 10px;
 }
