--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 body {
     display: flex;
     margin: 0;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .left {
@@ -19,10 +19,6 @@ body {
 .right {
     width: 70%;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-left: 50px;
     background-color: #f9fafb;
 }
 
@@ -48,7 +44,99 @@ img {
     margin: 10px;
 }
 
+button {
+    background-color: #596D48;
+    color: white;
+    border: none;
+    padding: 1em 3em;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 8px;
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
+    margin-left: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+a {
+    color: #596D48;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.first {
+    margin-top: 10%;
+}
+
+legend {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-left: 50px;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.heading {
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+p {
+    margin-left: 50px;
+}
+
+.form-wrapper {
+    background-color: white;
+    padding-top: 5px;
+    padding-bottom: 30px;
+    margin-top: 50px;
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
+}
+
 form {
-    background-color: red;
-    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 50px;
+    gap: 50px;
+}
+
+form div {
+    display: flex;
+    flex-direction: column;
+    width: 20em;
+    position: relative;
+}
+
+input {
+    outline: none;
+    height: 1.6rem;
+    border: 1px solid #E5E7EB;
+    border-radius: 6px;
+    margin-bottom: 20px;
+    font-size: 100%;
+}
+
+input:focus {
+    border-color: blue;
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
+
+}
+
+label {
+    font-size: 0.9rem;
+    margin-bottom: 5px;
+}
+
+input[type='password']:invalid {
+    border-color: red;
+
+}
+
+input[type='password']:invalid + span::after {
+    font-size: 0.8rem;
+    content: '* Passwords do not match';
+    color: red;
+    position: absolute;
+    top: 195px;
 }
